solved - white space on right side on mobile

--- a/Styles/main.css
+++ b/Styles/main.css
@@ -5,6 +5,7 @@
 html {
   /*font-size: 16px;*/
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 ul {
